fixed the horizontal scroll issue

--- a/css/style3.css
+++ b/css/style3.css
@@ -248,8 +248,6 @@ video {
 .content-bg {
     padding-top: 100px;
     padding-bottom: 100px;
-    overflow: visible;
-    width: 100vw;
     transform: skewY(11deg);
     background-image: linear-gradient(70deg,rgb(0,21,50),#005075);
     z-index: -1;   
@@ -261,9 +259,6 @@ video {
 }
 
 .content {
-    position: relative;
-    z-index: 100;
-    width: 100vw;
     padding-bottom: 100px;
 }
 
